added valid-ufs and valid-equipments
